Change title and description

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: Project Pages
-description: "An Integrated Scientific Blogging Template"
+title: Ctrl - Alt - WTF
+description: "A blog detailing my software adventures"
 url: "https://spidy88.github.io"
 
 
