--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ url: "https://spidy88.github.io"
 baseurl: "/blog"
 header-img: /img/home-bg.jpg
 headercolor: "#FFFFFF"
-logo: /blog/img/logos/Project-Pages-New-Logo-Inverted.png
+logo: /blog/img/icons/spiderman-avatar.jpg
 
 # Tertiary Parameters
 github_username:  Spidy88
